k8s-manifest-kubectl/ingress-controller.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: container1-svc
          servicePort: 80
        path: /container1(/|$)(.*)
  - http:
      paths:
      - backend:
          serviceName: container2-svc
          servicePort: 80
        path: /container2(/|$)(.*)
